[FIX] Kleiner Visueller Fix zur Vorbeugung von Fehlern bei Texten in Tabellen.

--- a/equitania/views/eq_report_style.xml
+++ b/equitania/views/eq_report_style.xml
@@ -5,6 +5,10 @@
     body {
         color: #000 !important;
     }
+    
+    td {
+        vertical-align:top;
+    }
     .border-black td {
         border-top: 1px solid black !important;
     }
