[CHG] Report Auftragspositionen: Rahmenauftragsnummer wird jetzt nur gedruckt wenn auch eine vorhanden ist.

--- a/equitania/views/eq_report_open_sale_order_line.xml
+++ b/equitania/views/eq_report_open_sale_order_line.xml
@@ -59,8 +59,9 @@
                                     <strong><span t-field="o.eq_customer"/></strong>
                                     <br/>
 	                                    <span t-field="o.eq_order_id.client_order_ref"/>
-                                    <br/>
+                                        <p  t-if="o.eq_framework_agreement_id">
 	                                    Rahmenauftragsnr. <span t-field="o.eq_framework_agreement_id"/>
+                                        </p>
 	                                
                                 </td>
                                 <td>
