[CHG] Report Auftragspositionen: Schreibweisen für Restmenge und KD-Nr. geändert

--- a/equitania/views/eq_report_open_sale_order_line.xml
+++ b/equitania/views/eq_report_open_sale_order_line.xml
@@ -19,7 +19,7 @@
                                         <br/>Zuständig
                                 </th>
                                 <th style="vertical-align:top!important;">
-                                    <strong>K-Nr.</strong>
+                                    <strong>KD-Nr.</strong>
                                 </th>
                                 <th style="vertical-align:top!important;">
                                     <strong>Kunde</strong>
@@ -35,7 +35,7 @@
                                     <strong>Menge</strong>
                                 </th>
                                 <th class="text-right" style="vertical-align:top!important;">
-                                    <strong>RestMenge</strong>
+                                    <strong>Restmenge</strong>
                                 </th>
                                 <th style="vertical-align:top!important;">
                                     <strong>Produktnummer</strong>
