--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -53,7 +53,7 @@
 									<span>Order no.</span>
 								</td>
 								<td class="text-right">
-									<span t-field="o.origin"/>
+									<span t-field="o.name"/>
 								</td>
 							</tr>
 							<tr t-if="o.type == 'in_invoice'">
@@ -69,7 +69,7 @@
 									<span>Customer no.</span>
 								</td>
 								<td class="text-right">
-									<span t-field="o.partner_id.ref" id="eq_customer_ref"/>
+									<span t-field="o.partner_id.eq_customer_ref" id="eq_customer_ref"/>
 								</td>
 							</tr>
 							<tr>
