--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -70,12 +70,12 @@
 									<!-- <span t-esc="o.date.split(' ')[0]"/>-->
 								</td>
 							</tr>
-							<tr t-if="o.min_date and o.state == 'done'">
+							<tr t-if="o.date_done and o.state == 'done'">
 								<td>
 									<span>Delivery Date</span>
 								</td>
-								<td class="text-right" t-if="o.min_date">
-									<span t-esc="o.min_date.split(' ')[0].split('-')[2] + '.' + o.min_date.split(' ')[0].split('-')[1] + '.' + o.min_date.split(' ')[0].split('-')[0]"/>
+								<td class="text-right" t-if="o.date_done">
+									<span t-esc="o.date_done.split(' ')[0].split('-')[2] + '.' + o.date_done.split(' ')[0].split('-')[1] + '.' + o.date_done.split(' ')[0].split('-')[0]"/>
 								</td>
 							</tr>
 							<tr>
