--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -159,6 +159,11 @@
 				</thead>
 				<tbody class="invoice_tbody">
 					<tr t-foreach="o.invoice_line" t-as="l">
+						<td colspan="10">
+							<p style="font-weight:bold;">Delivery No. <span t-field="l.eq_move_id.picking_id"/> from <span t-esc="l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[2] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[1] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[0]"/> / Delivery Date (the date of service)</p>
+						</td>
+					</tr>
+					<tr t-foreach="o.invoice_line" t-as="l">
 						<td><span t-field="l.product_id.default_code"/></td>
 						<td><strong><span t-field="l.product_id.name"/></strong><br/><span t-field="l.name"/>
 							<t t-if="l.product_id.eq_drawing_number">
