--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -158,36 +158,76 @@
 					</tr>
 				</thead>
 				<tbody class="invoice_tbody">
-					<tr t-foreach="o.invoice_line" t-as="l">
-						<td colspan="10">
-							<p style="font-weight:bold;">Delivery No. <span t-field="l.eq_move_id.picking_id"/> from <span t-esc="l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[2] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[1] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[0]"/> / Delivery Date (the date of service)</p>
-						</td>
-					</tr>
-					<tr t-foreach="o.invoice_line" t-as="l">
-						<td><span t-field="l.product_id.default_code"/></td>
-						<td><strong><span t-field="l.product_id.name"/></strong><br/><span t-field="l.name"/>
-							<t t-if="l.product_id.eq_drawing_number">
-								<p>Drawing No.: <span t-field="l.product_id.eq_drawing_number"/></p><!-- Zeigt die Zeichnungsnummer der Produktvariante an -->
-							</t>
-							<t t-if="not l.product_id.eq_drawing_number">
-								<p>Drawing No.: <span t-field="l.product_id.product_tmpl_id.eq_drawing_number"/></p><!-- Zeigt die Zeichnungsnummer des Hauptprodukts an, wenn für die Variante keine Nummer hinterlegt ist -->
-							</t>
-						</td>
-						<td>
-							<span t-field="l.quantity"/>
-							<span t-field="l.uos_id"  groups="product.group_uom"/>
-						</td>
-						<td class="text-right">
-							<span t-field="l.price_unit"/>
-						</td>
-						<td class="text-right" groups="sale.group_discount_per_so_line"><span t-field="l.discount"/></td>
-						<!-- <td class="text-right">
-							<span t-esc="', '.join(map(lambda x: x.name, l.invoice_line_tax_id))"/>
-						</td>-->
-						<td class="text-right">
-							<span t-field="l.price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
-						</td>
-					</tr>
+			        <t t-foreach="o.sale_layout_lines(invoice_id=o.id)" t-as="p">
+			            <!-- Name of the category -->
+			            <t t-call="equitania.category_template"/>
+			
+			            <!-- Lines associated -->
+			            <t t-foreach="p['lines']" t-as="l">
+								<tr t-foreach="o.invoice_line" t-as="l">
+									<td colspan="10">
+										<p style="font-weight:bold;">Delivery No. <span t-field="l.eq_move_id.picking_id"/> from <span t-esc="l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[2] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[1] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[0]"/> / Delivery Date (the date of service)</p>
+									</td>
+								</tr>
+								<tr>
+									<td><span t-field="l.product_id.default_code"/></td>
+									<td><strong><span t-field="l.product_id.name"/></strong><br/><span t-field="l.name"/>
+										<t t-if="l.product_id.eq_drawing_number">
+											<p>Drawing No.: <span t-field="l.product_id.eq_drawing_number"/></p><!-- Zeigt die Zeichnungsnummer der Produktvariante an -->
+										</t>
+										<t t-if="not l.product_id.eq_drawing_number">
+											<p>Drawing No.: <span t-field="l.product_id.product_tmpl_id.eq_drawing_number"/></p><!-- Zeigt die Zeichnungsnummer des Hauptprodukts an, wenn für die Variante keine Nummer hinterlegt ist -->
+										</t>
+									</td>
+									<td>
+										<span t-field="l.quantity"/>
+										<span t-field="l.uos_id"  groups="product.group_uom"/>
+									</td>
+									<td class="text-right">
+										<span t-field="l.price_unit"/>
+									</td>
+									<td class="text-right" groups="sale.group_discount_per_so_line"><span t-field="l.discount"/></td>
+									<!-- <td class="text-right">
+										<span t-esc="', '.join(map(lambda x: x.name, l.invoice_line_tax_id))"/>
+									</td>-->
+									<td class="text-right">
+										<span t-field="l.price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+									</td>
+								</tr>
+			            </t>
+			
+			            <!-- Subtotal -->
+			            <t t-call="equitania.subtotal_template"/>
+			
+			            <!-- Separator -->
+			            <t t-call="equitania.separator_template"/>
+			
+			            <!-- Pagebreak -->
+			            <t t-if="'pagebreak' in p['category'] and p['category'].pagebreak is True">
+			                <t t-if="p_index &lt; p_size - 1">
+			                    <![CDATA[
+			                        </tbody>
+			                    </table>
+			                    <p style="page-break-before:always;"> </p>
+			                    <table class="table table-condensed">
+			                    ]]>
+			                    <thead>
+			                        <tr>
+			                            <th>Description</th>
+			                            <th>Quantity</th>
+			                            <th groups="product.group_uom">Unit of measure</th>
+			                            <th class="text-right">Unit Price</th>
+			                            <th class="text-right" groups="sale.group_discount_per_so_line">Discount (%)</th>
+			                            <th class="text-right">Taxes</th>
+			                            <th class="text-right">Amount</th>
+			                        </tr>
+			                    </thead>
+			                    <![CDATA[
+			                        <tbody>
+			                    ]]>
+			                </t>
+			            </t>
+			        </t>
 				</tbody>
 			</table>
 			<div class="row padding-fix">
