--- a/equitania/sale_layout/views/sale_layout_template.xml
+++ b/equitania/sale_layout/views/sale_layout_template.xml
@@ -20,7 +20,7 @@
 <template id="subtotal_template">
     <!-- Subtotal -->
     <t t-if="'subtotal' in p['category'] and p['category'].subtotal is True">
-        <tr class="text-right">
+        <tr class="text-right subtotal">
             <td colspan="100">
                 <strong>Subtotal: </strong>
                 <span t-esc="p['subtotal']" t-esc-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
