--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -165,7 +165,7 @@
 			
 			            <!-- Lines associated -->
 						<tr t-foreach="o.invoice_line" t-as="l">
-							<td colspan="10">
+							<td colspan="10" t-if="l.eq_move_id.picking_id">
 								<p style="font-weight:bold;">Delivery No. <span t-field="l.eq_move_id.picking_id"/> from <span t-esc="l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[2] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[1] + '.' + l.eq_move_id.picking_id.date_done.split(' ')[0].split('-')[0]"/> / Delivery Date (the date of service)</p>
 							</td>
 						</tr>
