--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -53,7 +53,7 @@
 									<span>Order no.</span>
 								</td>
 								<td class="text-right">
-									<span t-field="o.eq_sale_order"/>
+									<span t-field="o.name"/>
 								</td>
 							</tr>
 							<tr t-if="o.type == 'in_invoice'">
