--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -185,13 +185,17 @@
                         	<td>
                             <strong><span t-field="line.product_id.name"/></strong>
                             <t t-if="line.name"><br/><span t-field="line.name"/></t>
+							<!-- Zeigt die Zeichnungsnummer der Produktvariante an -->
 							<t t-if="line.product_id.eq_drawing_number">
-								<br/>Drawing No.: <span t-field="line.product_id.eq_drawing_number"/><!-- Zeigt die Zeichnungsnummer der Produktvariante an -->
+								<br/>Drawing No.: <span t-field="line.product_id.eq_drawing_number"/>
 							</t>
-							<t t-if="not line.product_id.eq_drawing_number">
-								<br/>Drawing No.: <span t-field="line.product_id.product_tmpl_id.eq_drawing_number"/><!-- Zeigt die Zeichnungsnummer des Hauptprodukts an, wenn für die Variante keine Nummer hinterlegt ist -->
-							</t>
-                            <t t-if="o.show_delivery_date"><span><strong><br/>Delivery date: <span t-field="line.get_delivery_date"/></strong></span></t>
+							<!-- Zeigt die Zeichnungsnummer des Hauptprodukts an, wenn für die Variante keine Nummer hinterlegt ist -->
+							<!--<t t-if="not line.product_id.eq_drawing_number">
+								<br/>Drawing No.: <span t-field="line.product_id.product_tmpl_id.eq_drawing_number"/>
+							</t>-->
+							<t t-if="o.state not in ['draft','sent']">
+                            	<t t-if="o.show_delivery_date"><span><strong><br/>Delivery date: <span t-field="line.get_delivery_date"/></strong></span></t>
+                            </t>
 	                        <div id="agreement_id"/>
                         </td>
                         <td class="text-right">
